--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,18 +2,18 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Andrea Pizzo
     - name: Date of Birth
-      value: 14th March 1879
+      value: 12th December 1988
     - name: Languages
-      value: English, German
+      value: Italian, English, Spanish
 
 - title: Education
   type: time_table
   contents:
     - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+      institution: University of Pisa, Italy
+      year: 2019
       description:
         - Description 1.
         - Description 2.
