--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -15,11 +15,15 @@
       institution: University of Pisa, Italy
       year: 2019
       description:
-        - title: Advisor: Prof. Luca Sanguinetti.
-        - title: Title: "Energy efficient cellular networks for 5G communications systems".
-    - title: M.Sc. in Telecommunications Engineering
-      institution: University of Pisa, Italy
-      year: 2013
+        - Advisor: Prof. Luca Sanguinetti.
+        - Title: Energy efficient cellular networks for 5G communications systems.
+        - title: Description 3.
+          contents:
+            - Sub-description 1.
+            - Sub-description 2.
+    - title: Federal teaching diploma
+      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
+      year: 1900
       description:
         - Description 1.
         - Description 2.
@@ -67,9 +71,13 @@
 - title: Honors and Awards
   type: time_table
   contents:
-    - year: 2018
+    - year: 1921
       items: 
-        - Young Author Best Paper Award 2018
+        - Nobel Prize in Physics 
+        - Matteucci Medal
+    - year: 2029
+      items: 
+        - Max Planck Medal
 
 - title: Academic Interests
   type: nested_list
