--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -14,7 +14,7 @@
     - title: PhD in Information Engineering
       institution: University of Pisa, Italy
       year: 2019
-      description:
+      contents:
         - Advisor: Prof. Luca Sanguinetti.
         - Title: Energy efficient cellular networks for 5G communications systems.
         - title: Description 3.
