--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -14,52 +14,42 @@
     - title: PhD in Information Engineering
       institution: University of Pisa, Italy
       year: 2019
-      contents:
-        - Advisor: Prof. Luca Sanguinetti.
-        - Title: Energy efficient cellular networks for 5G communications systems.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
-      description:
-        - Description 1.
-        - Description 2.
+    - title: M.Sc. in Telecommunications Engineering
+      institution: University of Pisa, Italy
+      year: 2013
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Postdoctoral Associate
+      institution: Universitat Pompeu Fabra, Spain
+      year: 2021 - Current
       description:
-        - Description 1.
-        - Description 2.
+        - Prof. Angel Lozano.
+        - Near field communications and smart radio environments.
         - title: Description 3.
           contents:
             - Sub-description 1.
             - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+
+    - title: Postdoctoral Associate
+      institution: New York University, USA
+      year: 2019 - 2021
       description:
-        - Description 1.
-        - Description 2.
+        - Prof. Thomas Marzetta.
+        - Physical channel modeling and holographic MIMO communications.
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
+    - title: Visiting Ph.D. Scholar
+      institution: New York University, USA
+      year: 2018
       description:
+      - Prof. Thomas Marzetta.
+      - Beyond 5G communications.
 
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
+    - title: Research Assistant
+      institution: Delft University of Technology, The Netherlands
+      year: 2014 - 2015
+      description: Wireless localization of autonomous underwater vehicles.
 
 - title: Open Source Projects
   type: time_table
