--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -14,6 +14,7 @@
     - title: PhD in Information Engineering
       institution: University of Pisa, Italy
       year: Apr 2019
+      description: Prof. Luca Sanguinetti.
     - title: M.Sc. in Telecommunications Engineering
       institution: University of Pisa, Italy
       year: Dec 2013
@@ -25,25 +26,25 @@
       institution: Universitat Pompeu Fabra, Spain
       year: Oct 2021 - Current
       description:
-        - Advisor: Prof. Angel Lozano.
+        - Prof. Angel Lozano.
 
     - title: Postdoctoral Associate
       institution: New York University, USA
       year: May 2019 - May 2021
       description:
-        - Advisor: Prof. Thomas Marzetta.
+        - Prof. Thomas Marzetta.
 
     - title: Visiting Ph.D. Scholar
       institution: New York University, USA
       year: Apr 2018 - Sep 2018
       description:
-      - Host: Prof. Thomas Marzetta.
+      - Prof. Thomas Marzetta.
 
     - title: Research Assistant
       institution: Delft University of Technology, The Netherlands
       year: Oct 2014 - Oct 2015
       description: 
-      - Advisor: Prof. Geert Leus.
+      - Prof. Geert Leus.
 
 - title: Open Source Projects
   type: time_table
