--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -26,25 +26,25 @@
       institution: Universitat Pompeu Fabra, Spain
       year: Oct 2021 - Current
       description:
-        - Prof. Angel Lozano.
+        - <a href="https://www.upf.edu/web/angel-lozano">Prof. Angel Lozano</a>.
 
     - title: Postdoctoral Associate
       institution: New York University, USA
       year: May 2019 - May 2021
       description:
-        - Prof. Thomas Marzetta.
+        - <a href="https://wireless.engineering.nyu.edu/thomas-marzetta/">Prof. Thomas Marzetta</a>.
 
     - title: Visiting Ph.D. Scholar
       institution: New York University, USA
       year: Apr 2018 - Sep 2018
       description:
-      - Prof. Thomas Marzetta.
+        - <a href="https://wireless.engineering.nyu.edu/thomas-marzetta/">Prof. Thomas Marzetta</a>.
 
     - title: Research Assistant
       institution: Delft University of Technology, The Netherlands
       year: Oct 2014 - Oct 2015
       description: 
-      - Prof. Geert Leus.
+        - <a href="https://sps.ewi.tudelft.nl/People/bio.php?id=3">Prof. Geert Leus</a>.
 
 - title: Honors and Awards
   type: time_table
