--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -62,4 +62,4 @@
   contents:
     - title: Associate Editor 
       year: Mar 2023 - Current
-      description: aaa
+      description: <a href="https://www.comsoc.org/publications/journals/ieee-wcl">IEEE Wireless Communications Letters</a>.
